--- a/index.html
+++ b/index.html
@@ -3,9 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VanillaJS Quiz Game</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
+    <div class="container">
+
+        <div class="screen active" id="start-screen">
+            <h1>Quiz Time!</h1>
+            <p>Test your knowledge with a few questions</p>
+            <button id="start-btn">Start Quiz</button>
+        </div>
+
+
+        <div class="screen" id="quiz-screen">
+            <div class="quiz-header">
+                <h2 id="question-text">Question goes here</h2>
+                <div class="quiz-info">
+                    <p>
+                        Question <span id="current-question">1</span> of <span id="total-questions">10</span>
+                    </p>
+
+                    <p>
+                        Score: <span id="score">0</span>
+                    </p>
+                </div>
+            </div>
+
+            <div class="answers-container" id="answers-container">
+                <!-- Answers buttons go here -->
+
+            </div>
+
+            <div class="progress-bar">
+                <div id="progress" class="progress"></div>
+            </div>
+
+
+        </div>
+
+        <div class="screen" id="result-screen">
+            <h1>Quiz Results</h1>
+            <div class="result-info">
+                <p>Your final score is <span id="final-score">0</span> out of <span id="max-score">10</span></p>
+
+                <div id="result-message">Good job!</div>
+            </div>
+            <button id="restart-btn">Retake Quiz</button>
+        </div>
+
+
+    </div>
     
 </body>
 </html>
