--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
 
     <div class="container">
 
-        <div class="screen" id="start-screen">
+        <div class="screen active" id="start-screen">
             <h1>Quiz Time!</h1>
             <p>Test your knowledge with a few questions</p>
             <button id="start-btn">Start Quiz</button>
         </div>
 
 
-        <div class="screen active" id="quiz-screen">
+        <div class="screen" id="quiz-screen">
             <div class="quiz-header">
                 <h2 id="question-text">Question goes here</h2>
                 <div class="quiz-info">
